[tool.poetry]
name = "ai-tr-v0"
version = "0.1.0"
description = "A short description of your package"
authors = ["Ayman Maimoni"]


[tool.poetry.dependencies]
python = ">3.10"
pandas = ">=2.2.3"
numpy = "^2.2.1"
yfinance = ">0.1.63"
scikit-learn = ">0.24.2"
cvxopt = ">1.2.7"
PyPortfolioOpt = ">=1.5.6"
matplotlib = ">=3.10.0"
seaborn = ">=0.13.2"
pandas_datareader = ">=0.10.0"
pulp = ">=2.9.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

